[package]
name = "gramps-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grampscli"
path = "src/grampscli.rs"
doc = false
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "gramps-core",
  "libs/*",
]

[dependencies]
log = "*"
env_logger = "*"
gramps = { path = "libs/gramps" }
grampscli = { path = "libs/grampscli" }
eyre = "0.6.8"
clap = { version = "4.3.19", features = ["cargo", "derive"] }
gramps-core = { version = "0.1.0", path = "gramps-core" }
